[gd_scene load_steps=15 format=3 uid="uid://co6kfdvvwkcbm"]

[ext_resource type="Texture2D" uid="uid://brisamy0jirjm" path="res://minigames/jugger_rps/sprites/JuggererSprites.png" id="1_skljj"]
[ext_resource type="Script" uid="uid://cjkhhr1tqh01o" path="res://minigames/jugger_rps/scripts/juggerer.gd" id="2_a6xjn"]
[ext_resource type="Texture2D" uid="uid://bojjjt3rhvvco" path="res://minigames/jugger_rps/sprites/YouMarker.png" id="3_1he23"]
[ext_resource type="AudioStream" uid="uid://dovu7rpt6dm43" path="res://minigames/jugger_rps/sounds/SwordHit.wav" id="3_3ps7c"]

[sub_resource type="Animation" id="Animation_ws5ke"]
length = 0.001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxBody/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-21.5, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxSword/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(33, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6a4r2"]
resource_name = "stancereverse"
step = 1.0

[sub_resource type="Animation" id="Animation_m1yqf"]
resource_name = "stances"
length = 6.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxBody/CollisionShape2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-4, -6), Vector2(1, 9), Vector2(-21, 19), Vector2(5, -6), Vector2(0, 14), Vector2(22, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxSword/CollisionShape2D:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(2, 11), Vector2(25, 17), Vector2(4, -7), Vector2(-2, 11), Vector2(-25, 17), Vector2(-3, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t5kfw"]
_data = {
&"RESET": SubResource("Animation_ws5ke"),
&"stancereverse": SubResource("Animation_6a4r2"),
&"stances": SubResource("Animation_m1yqf")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_1gx3a"]
atlas = ExtResource("3_1he23")
region = Rect2(0, 0, 33, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1he23"]
atlas = ExtResource("3_1he23")
region = Rect2(33, 0, 33, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a4r2"]
atlas = ExtResource("3_1he23")
region = Rect2(66, 0, 33, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1yqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gx3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1he23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a4r2")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1he23"]
size = Vector2(11, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kp8fq"]
size = Vector2(65.5, 3)

[node name="Juggerer" type="Sprite2D" node_paths=PackedStringArray("you_marker", "ani_player")]
texture = ExtResource("1_skljj")
flip_h = true
hframes = 3
frame = 2
script = ExtResource("2_a6xjn")
you_marker = NodePath("YouMarker")
ani_player = NodePath("AnimationPlayer")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3ps7c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t5kfw")
}
speed_scale = 0.0

[node name="YouMarker" type="AnimatedSprite2D" parent="."]
position = Vector2(-32, -52)
sprite_frames = SubResource("SpriteFrames_m1yqf")
frame_progress = 0.15303557

[node name="HitboxBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxBody"]
position = Vector2(-21.5, 26)
shape = SubResource("RectangleShape2D_1he23")

[node name="HitboxSword" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxSword"]
position = Vector2(33, -7)
shape = SubResource("RectangleShape2D_kp8fq")

[connection signal="area_entered" from="HitboxBody" to="." method="_on_hitbox_body_area_entered"]
[connection signal="body_entered" from="HitboxBody" to="." method="_on_hitbox_body_body_entered"]
[connection signal="area_entered" from="HitboxSword" to="." method="_on_hitbox_sword_area_entered"]
